# blockchain_backend

./: text.te
clip-client/: Cargo.toml  build.rs  build_error.txt  build_error_final.txt  build_error_v3.txt  final_errors.txt
clip-client/examples/: basic_usage.rs
clip-client/proto/: clip.proto
clip-client/src/: lib.rs
clip-gui/: Cargo.toml
clip-gui/src/: main.rs
clip-gui/static/: index.html
