[package]
name = "clip-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.4", features = ["fs", "cors"] }
clip-client = { path = "../clip-client" }
tonic = "0.9"
sha2 = "0.10"
hex = "0.4"
